# Constellations

./: .env  Cargo.toml  DEFAULT_CONFIG.json5  README.md  SYSTEM.md  config.json  system.rs
celestia/: Cargo.toml
celestia/src/: lib.rs  main.rs
celestia/src/api/handlers/: mod.rs
celestia/src/commands/: test.rs
celestia/src/spaceport/: mod.rs  schema.rs
celestia/src/spaceport/api/: mod.rs  v0.rs
celestiad/: Cargo.toml
celestiad/src/: lib.rs  main.rs  settings.rs
celestiad/src/api/: mod.rs  v0.rs
celestiad/src/api/handlers/: enable_llm.rs  enable_transcription.rs  mod.rs  open.rs
celestiad/src/commands/: mod.rs  test.rs
celestiad/src/holobank/: mod.rs  schema.rs
celestiad/src/spaceport/: mod.rs
celestiad/src/spaceport/api/: mod.rs  v0.rs
celestiad/src/spaceport/api/handlers/: dock.rs  edittext.rs  mod.rs  newtext.rs  realtimetext.rs  service.rs  text.rs
constellations/: Cargo.toml
constellations/src/: collection.rs  lib.rs
constellations/src/asset/: mod.rs
constellations/src/asset/assembly/: mod.rs
constellations/src/asset/block/: heap.rs  mod.rs  text.rs
constellations/src/user/: mod.rs
holobank/: Cargo.toml
holobank/src/: lib.rs  schema.rs
holobank/src/asset/block/: text.rs
nebula/: Cargo.toml  README.md
nebula/src/: lib.rs
nebula/src/common/: block.rs  mod.rs
nebula/src/common/types/: text.rs
nebula/src/core/: mod.rs
nebula/src/data/: mod.rs
nebula/src/data/assembly/: mod.rs
nebula/src/data/block/: mod.rs  text.rs
nebula/src/data/blueprint/: mod.rs
nebula/src/holobank/: README.md  mod.rs  schema.rs
nebula/src/holobank/asset/block/: metadata.rs
nebula/src/holobank/asset/blueprint/: mod.rs
nebula/src/spaceport/: README.md  mod.rs
nebula/src/spaceport/bank/: collection.rs  mod.rs
nebula/src/system/: README.md  mod.rs
spacecraft/: README.md
spacecraft/celestia-tui/: Cargo.toml  README.md
spacecraft/celestia-tui/src/: main.rs
spaceport/: Cargo.toml  README.md
spaceport/src/: main.rs
warpgate/: Cargo.toml  README.md
warpgate/src/: main.rs
