[package]
name = "celestia"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
cola = { version = "0.4.5", features = ["encode", "serde"] }
cozo = { path = "../../Rust/cozo/cozo-core", features = ["storage-rocksdb"] }
heapless = "0.8.0"
iceoryx2 = { version = "0.4.1", features = ["logger_tracing"] }
postcard = { version = "1.0.10", features = ["alloc"] }
serde = "1.0.210"
serde_bytes = "0.11.15"
serde_json = "1.0.128"
sha2 = "0.10.8"
tracing = "0.1.40"
ulid = { version = "1.1.3", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
zenoh = { version = "1.0.0", features = ["unstable"] }

constellations = { path = "../constellations-data" }
tokio = { version = "1.41.0", features = ["full"] }
tracing-subscriber = "0.3.18"
axum = "0.7.7"
clap = "4.5.20"
anyhow = "1.0.93"
config = "0.14.1"
dotenv = "0.15.0"
