[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
cola = { version = "0.4.5", features = ["encode", "serde"] }
cozo = { version = "0.7.6", features = ["storage-rocksdb"] }
heapless = "0.8.0"
postcard = { version = "1.0.10", features = ["alloc"] }
serde = "1.0.210"
serde_bytes = "0.11.15"
serde_json = "1.0.128"
sha2 = "0.10.8"
tracing = "0.1.40"
ulid = { version = "1.1.3", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
zenoh = { version = "1.0.0-beta.4", features = ["unstable"] }
