[package]
name = "celestia-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
scribe = "0.8.4"
serde = "1.0.210"
tokio = { version = "1.41.1", features = ["full"] }
tui-textarea = { version = "0.7.0", features = ["search"] }
zenoh = { version = "1.0.3", features = ["unstable"] }

constellations = { path = "../../constellations" }
reqwest = "0.12.9"
ulid = "1.1.3"
rand = "0.8.5"
serde_bytes = "0.11.15"
serde_json = "1.0.133"
